fix(92): misaligned titles

--- a/src/components/molecules/TransactionHistoryChart/styles.scss
+++ b/src/components/molecules/TransactionHistoryChart/styles.scss
@@ -1,15 +1,27 @@
 @import "src/styles/globals.scss";
 
 .trans-history {
+  @include centered-row;
+  --min-height: 242px;
+
+  flex: 1;
+  width: 100%;
+  min-height: var(--min-height);
+
   &-loader {
     @include centered-row;
     justify-content: center;
     height: 220px;
+    width: 100%;
   }
 
   &-chart {
-    // transform: translateY(10px);
-    height: 220px;
+    height: 100%;
+    width: 100%;
+
+    & > div {
+      min-height: var(--min-height);
+    }
   }
 
   &-text {
