--- a/src/pages/Home/Statistics/styles.scss
+++ b/src/pages/Home/Statistics/styles.scss
@@ -20,12 +20,15 @@
   &-history {
     @include card-container;
     @include centered-column;
-    justify-content: space-between;
+    justify-content: start;
 
     flex: 2;
+    gap: 16px;
 
     &-options {
       @include centered-row;
+
+      gap: 8px;
       justify-content: space-between;
       flex-wrap: wrap;
     }
